tests/sksl/errors/InvalidThreadgroupRTS.glsl
### Compilation failed:

error: 1: 'threadgroup' is not permitted here
threadgroup int x;
^^^^^^^^^^^
1 error
